Some new projects addeded there is a 2 tic toc toe and a hidden memory game project

--- a/ISET_2018_Decouverte/ISET_2018_Decouverte/ISET_2018_Decouverte.csproj
+++ b/ISET_2018_Decouverte/ISET_2018_Decouverte/ISET_2018_Decouverte.csproj
@@ -55,6 +55,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DinerPhilosophe.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dsPerso.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -146,6 +149,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DinerPhilosophe.resx" />
     <EmbeddedResource Include="FicBD1.resx">
       <DependentUpon>FicBD1.cs</DependentUpon>
     </EmbeddedResource>
