--- a/Sudoku/Sudoku Game/Sudoku Game.csproj
+++ b/Sudoku/Sudoku Game/Sudoku Game.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{04A517D5-9686-4EA5-BEEB-49C7F04278AE}</ProjectGuid>
+    <ProjectGuid>{CAAF359A-8AAC-4631-BC3A-0EC3EB610946}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Memory_Game</RootNamespace>
-    <AssemblyName>Memory Game</AssemblyName>
+    <RootNamespace>Sudoku_Game</RootNamespace>
+    <AssemblyName>Sudoku Game</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,25 +45,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="fmEngine.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fmEngine.Designer.cs">
+      <DependentUpon>fmEngine.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fmInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fmInfo.Designer.cs">
+      <DependentUpon>fmInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmWelcome.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmWelcome.Designer.cs">
-      <DependentUpon>frmWelcome.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="fmEngine.resx">
+      <DependentUpon>fmEngine.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fmInfo.resx">
+      <DependentUpon>fmInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmWelcome.resx">
-      <DependentUpon>frmWelcome.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
