--- a/Memory Game - Copy/Memory Game/Memory Game.csproj
+++ b/Memory Game - Copy/Memory Game/Memory Game.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{04A517D5-9686-4EA5-BEEB-49C7F04278AE}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>Memory_Game</RootNamespace>
     <AssemblyName>Memory Game</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
@@ -48,26 +48,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmAboutGame.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAboutGame.Designer.cs">
+      <DependentUpon>frmAboutGame.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmAuthorInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAuthorInfo.Designer.cs">
+      <DependentUpon>frmAuthorInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmGameEngine.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmGameEngine.Designer.cs">
       <DependentUpon>frmGameEngine.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmWelcome.cs">
+    <Compile Include="frmWelcomeScreen.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmWelcome.Designer.cs">
-      <DependentUpon>frmWelcome.cs</DependentUpon>
+    <Compile Include="frmWelcomeScreen.Designer.cs">
+      <DependentUpon>frmWelcomeScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmAboutGame.resx">
+      <DependentUpon>frmAboutGame.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAuthorInfo.resx">
+      <DependentUpon>frmAuthorInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmGameEngine.resx">
       <DependentUpon>frmGameEngine.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\frmWelcome.resx">
-      <DependentUpon>frmWelcome.cs</DependentUpon>
-      <Link>frmWelcome.resx</Link>
+    <EmbeddedResource Include="frmWelcomeScreen.resx">
+      <DependentUpon>frmWelcomeScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
