--- a/InterimDesktopApp/InterimDesktopApp/packages.config
+++ b/InterimDesktopApp/InterimDesktopApp/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="iTextSharp" version="5.5.13" targetFramework="net461" />
   <package id="MaterialSkin" version="0.2.1" targetFramework="net461" />
   <package id="MetroFramework" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net461" />
