--- a/InterimDesktopApp/InterimDesktopApp/InterimDesktopApp.csproj
+++ b/InterimDesktopApp/InterimDesktopApp/InterimDesktopApp.csproj
@@ -118,6 +118,12 @@
     <Compile Include="frmGPrestation.Designer.cs">
       <DependentUpon>frmGPrestation.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmGPrints.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGPrints.Designer.cs">
+      <DependentUpon>frmGPrints.cs</DependentUpon>
+    </Compile>
     <Compile Include="InterimDBDataSet.cs">
       <DependentUpon>InterimDBDataSet.xsd</DependentUpon>
     </Compile>
@@ -148,6 +154,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmGPrestation.resx">
       <DependentUpon>frmGPrestation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmGPrints.resx">
+      <DependentUpon>frmGPrints.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
